<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorAbu"
    tools:context=".DoaSholatMayit">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/colorWhite"
        android:gravity="center_vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="7dp">

            <!-- TextView Nama DOa -->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="0dp"
                android:text="@string/judul_doa_sholat_mayit"
                android:textColor="@color/colorNamaDoa"
                android:textSize="20sp" />

            <!-- Button Suara -->
            <ImageButton
                android:id="@+id/btn_open_informasi_hadits"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_info_outline"
                android:layout_alignParentEnd="true"
                android:backgroundTintMode="screen"/>
        </RelativeLayout>
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="7dp"
                android:background="@color/colorWhite"
                android:padding="7dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/panduan_bacaan_sholat_mayit"
                    android:textSize="16sp"
                    android:textColor="@color/colorPrimary"
                    android:textAlignment="center"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/panduan_bacaan_sholat_mayit_detail"
                    android:textColor="@color/colorPrimary"
                    android:textSize="14sp"
                    android:textAlignment="textStart"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="7dp"
                android:background="@color/colorWhite"
                android:padding="7dp">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/img_doa_sholat_mayit"
                    android:scaleType="fitXY"
                    android:adjustViewBounds="true"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="7dp"
                android:layout_marginBottom="7dp"
                android:background="@color/colorWhite"
                android:padding="7dp">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/img_doa_sholat_mayit_arti"
                    android:scaleType="fitXY"
                    android:adjustViewBounds="true"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>